# scaler

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  MAINTAINERS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml  publish-artifact.yml  publish-documentation.yml
cmake/: ScalerPythonModule.cmake
docker/: Dockerfile  entrypoint.sh
docs/: jupyterlite-overrides.txt  requirements_docs.txt
docs/source/: conf.py  index.rst
examples/: pillow.py  quant_research_sample.md  readme.md  resources_client.py  submit_tasks.py  timeseries.py
examples/cpp/: CMakeLists.txt
examples/notebooks/: requirements_notebooks.txt
examples/parfun/: count_words.py  requirements.txt
examples/pargraph/: generate_report.py
examples/ray_compat/: requirements.txt
scaler/: CMakeLists.txt
scaler/client/: client.py  future.py  object_buffer.py  object_reference.py
scaler/cluster/: cluster.py  combo.py  scheduler.py
scaler/entry_points/: cluster.py  scheduler.py  symphony_cluster.py
scaler/io/: async_object_storage_connector.py  batch_sync_object_storage_connector.py  mixins.py  model.py  sync_object_storage_connector.py
scaler/object_storage/: CMakeLists.txt  constants.h  defs.h  io_helper.cpp  io_helper.h  message.cpp  message.h  object_register.cpp  object_register.h  object_storage_server.cpp  object_storage_server.h  pymod_object_storage_server.cpp
scaler/scheduler/: config.py  scheduler.py  task_manager.py  worker_manager.py
scaler/worker/: worker.py
scripts/: build.ps1  build.sh  build_wasm.sh  cibuildwheel_before_all_windows.ps1  download_install_dependencies.sh  generate_jupyterlite_config.py  library_tool.ps1  library_tool.sh  patch_jupyterlite_kernel.py  test.ps1  test_jupyterlite.sh
scripts/wasm_stubs/loky/: loky.py  pyproject.toml
scripts/wasm_stubs/psutil/: psutil.py  pyproject.toml
src/cpp/scaler/: CMakeLists.txt
src/cpp/scaler/error/: error.h
src/cpp/scaler/logging/: logging.h
src/cpp/scaler/object_storage/: CMakeLists.txt  defs.h  message.h  object_manager.cpp  object_manager.h  object_storage_server.cpp  object_storage_server.h  pymod_object_storage_server.cpp
src/cpp/scaler/protocol/: CMakeLists.txt
src/cpp/scaler/protocol/pymod/: bootstrap.cpp  capnp.cpp  schema_registry.cpp  serialize.cpp  utility.cpp  utility.h
src/cpp/scaler/utility/: CMakeLists.txt  error.h  format.h  io_result.h  logging.h  move_only_function.h  timestamp.h
src/cpp/scaler/utility/pipe/: CMakeLists.txt  pipe.h  pipe_reader.cpp  pipe_reader.h  pipe_reader_unix.cpp  pipe_reader_windows.cpp  pipe_utils.h  pipe_utils_unix.cpp  pipe_utils_windows.cpp  pipe_writer.cpp  pipe_writer.h  pipe_writer_unix.cpp  pipe_writer_windows.cpp
src/cpp/scaler/utility/pymod/: indexed_queue.cpp  pending_call.cpp  stable_priority_queue.cpp
src/cpp/scaler/uv_ymq/: CMakeLists.txt  accept_server.cpp  accept_server.h  accepting_server.cpp  accepting_server.h  address.cpp  address.h  binder_socket.cpp  binder_socket.h  configuration.h  connect_client.cpp  connect_client.h  connecting_client.cpp  connecting_client.h  event_loop_thread.cpp  event_loop_thread.h  io_context.cpp  io_context.h  lock_free_event_loop_thread.cpp  lock_free_event_loop_thread.h  message_connection.cpp  message_connection.h  typedefs.h  uv_loop_thread.cpp  uv_loop_thread.h
src/cpp/scaler/uv_ymq/internal/: message_connection.cpp
src/cpp/scaler/uv_ymq/pymod/: CMakeLists.txt  address.h  binder_socket.h  connector_socket.h  exception.h  io_context.h  uv_ymq.cpp  uv_ymq.h
src/cpp/scaler/wrapper/openssl/: CMakeLists.txt  secure_server.cpp  secure_server.h  secure_socket.cpp  secure_socket.h  ssl_context.cpp  ssl_context.h  types.h
src/cpp/scaler/wrapper/uv/: CMakeLists.txt  handle.h  stream.h  tcp.cpp  tcp.h
src/cpp/scaler/ymq/: CMakeLists.txt  address.cpp  address.h  binder_socket.cpp  binder_socket.h  buffered_bytes.h  bytes.h  configuration.h  connector_socket.cpp  connector_socket.h  epoll_context.cpp  epoll_context.h  event_loop.h  event_loop_thread.cpp  event_manager.h  interruptive_concurrent_queue.h  io_socket.cpp  io_socket.h  iocp_context.cpp  message.h  message_connection_tcp.cpp  message_connection_tcp.h  network_utils.h  simple_interface.cpp  simple_interface.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  timed_queue.h  timestamp.h  tls_config.cpp  tls_config.h  utils.h
src/cpp/scaler/ymq/event/: CMakeLists.txt  event_loop.h  event_selector_loop.h  event_type.h
src/cpp/scaler/ymq/event/selector/: CMakeLists.txt  epoll_selector.cpp  epoll_selector.h  kqueue_selector.cpp  kqueue_selector.h  selector.h
src/cpp/scaler/ymq/future/: binder_socket.cpp  binder_socket.h  connector_socket.cpp  connector_socket.h
src/cpp/scaler/ymq/internal/: CMakeLists.txt  accept_server.cpp  accept_server.h  client.cpp  client.h  connect_client.cpp  connect_client.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_unix.cpp  event_loop_thread_windows.cpp  message_connection.cpp  message_connection.h  raw_client_tcp_fd_linux.cpp  raw_client_tcp_fd_windows.cpp  raw_connection_tcp_fd_linux.cpp  raw_connection_tcp_fd_windows.cpp  raw_server_tcp_fd_linux.cpp  raw_server_tcp_fd_windows.cpp  websocket_server.cpp  websocket_server.h  websocket_stream.cpp  websocket_stream.h
src/cpp/scaler/ymq/pymod/: CMakeLists.txt  address.h  binder_socket.h  bytes.h  connector_socket.h  exception.h  io_context.h  message.h  py_buffer_bytes.h  tls_config.h  uv_ymq.cpp  uv_ymq.h  ymq.cpp  ymq.h
src/cpp/scaler/ymq/pymod_ymq/: exception.h  io_socket.h  python.h  ymq.cpp  ymq.h
src/cpp/scaler/ymq/sync/: binder_socket.cpp  binder_socket.h  connector_socket.cpp  connector_socket.h
src/scaler/ui/: app.py  (+1 more)
tests/: CMakeLists.txt  test_balance.py  test_capabilities.py  test_client.py  test_death_timeout.py  test_future.py  test_graph.py  test_resource_allocate_policy.py  test_serializer.py  test_tagged_allocate_policy.py  test_tagged_allocator.py
tests/cpp/wrapper/openssl/: CMakeLists.txt  sample_cert.pem  sample_private_key.pem  test_openssl.cpp
(+349 files in other folders)
